interfaces/blofeld-ng/templates/static/css/blofeld.css
html, html body {
    height: 100%;
    margin: 0;
}

body {
    background: #3c3b37;
/*    color: #eeeeec;*/
    padding: 0;
/*    overflow: hidden;*/
/*    font-family: sans-serif;*/
    font-size: 62.5%;
    height: 100%;
    margin: 0;
}

.ui-layout-resizer, .ui-layout-resizer-closed {
/*    background: #2e3436;*/
}

#footer {
    padding: 0 0 6px 0;
    text-align: center;
}

#wrapper {
    width: 100%;
    height: 100%;
}
    

img, table, td, th, tr, thead {
    border: none;
}

.max-height {
    height: 100%;
}

#header {
    padding: 6px 6px 0 6px;
}

#header-widget {
    height: 39px;
    padding: 4px 6px 0 6px;
    margin: 0;
}

table {
    table-layout: fixed;
    width: 100%;
/*    border-collapse: collapse;*/
    border-spacing: 0;
}

h1 {
    float: left;
    height: 32px;
    width: 116px;
    margin: 0 25px 0 0;
    padding: 0;
    text-indent: -9999px;
    background: url('../images/sprite.png') 0 -32px no-repeat;
}

#browser {
    padding-left: 6px;
}

/*tbody {*/
/*    height: 100%;*/
/*}*/

/*#browser > tbody > tr {*/
/*    height: 50%;*/
/*}*/

/*#browser > tbody > tr > td {*/
/*    padding: 0;*/
/*}*/


td, th {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    text-align: left;
    vertical-align: middle;
    padding: 3px 5px 3px 5px;
}

div.loading {
    
}

img.loading {
    position: relative;
    top: 50%;
}

.track-number {
    width: 2.3em;
}

#albums tr, #artists tr, #songs tr {
    height: 2em;
    
}

/*tr.tinted {*/
/*    background: #707070;*/
/*}*/

/*tr.selected {*/
/*    background: #3465a4;*/
/*}*/

thead {
    position: relative;
}

/*tr.now-playing {*/
/*    font-weight: bold;*/
/*}*/

.status {
    width: 19px;
}

tr.now-playing > td.status > .status-icon {
/*    width: 16px;*/
/*    height: 16px;*/
/*    background: url('../images/cp.png') center center no-repeat;*/
}

#songsContainer, #artistsContainer, #albumsContainer {
    padding: 0 6px 3px 0;
/*    overflow-y: scroll;*/
/*    overflow-x: hidden;*/
/*    background: #666;*/
}

.scrollingContainer {
    overflow-y: scroll;
    overflow-x: hidden;
/*    text-align: center;*/
    padding: 3px 3px 0 3px;
    height: 100%;
    width: 100%;
}

/*#songsContainer {*/
/*    width: 75%;*/
/*    background: #666;*/
/*    height: 100%;*/
/*    border-left: 10px solid #2e3436;*/
/*}*/

/*#artistsContainer, #albumsContainer {*/
/*    height: 50%;*/
/*    background: #666;*/
/*}*/

/*#artistsContainer {*/
/*    border-bottom: 10px solid #2e3436;*/
/*}*/

#player_container {
    height: 32px;
    position: relative;
    left: 132px;
}

#controls {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

#controls li {
    overflow: hidden;
    text-indent: -9999px;
/*	display: inline-block;*/
	position: absolute;
	top: 4px;
/*	width:32px;*/
/*	height:32px;*/
/*	cursor: pointer;*/
}

#skip_back {
/*    background: url('../images/sprite.png') 0 0 no-repeat;*/
    left:0px;
}

#pause {
/*    background: url('../images/sprite.png') -64px 0 no-repeat;*/
    left: 32px;
}

#play {
/*    background: url('../images/sprite.png') -96px 0 no-repeat;*/
    left: 32px;
}

#skip_forward {
/*    background: url('../images/sprite.png') -128px 0 no-repeat;*/
    left: 64px;
}

#cover_art {
    float: left;
    margin-right: 5px;
    width: 32px;
    height: 32px;
    background: url('../images/sprite.png') -224px 0 no-repeat;
}

#progress {
    position: absolute;
    left: 120px;
    height: 32px;
    width: 100px;
}

#progress_bar {
    background: #666;
    border: #555753 2px solid;
    height: 16px;
    margin-top: 7px;
    overflow: hidden;
}

#progress-bar {
/*    height: 16px;*/
    margin-top: 11px;
    width: 100%;
}

#load_progress {
    background: #707070;
    height: 32px;
    width: 50%;
    overflow: hidden;
}

#play_head {
    background: #3465a4;
    height: 32px;
    width: 50%;
    color: #eeeeec;
    overflow: visible;
    padding-left: 3px;
}

#now_playing {
    position: absolute;
/*    color: #888a85;*/
    left: 245px;
    height: 32px;
    width: 50%;
    margin-right: 100px;
}

#np_title {
    font-weight: bold;
}

#np_title, #np_artist, #np_album {
/*    color: #eeeeec;*/
}

#find {
    float: right;
    position: absolute;
/*    height: 32px;*/
    padding: 3px ;
    right: 14px;
    top: 14px;
}

#search_icon {
    width: 16px;
    height: 16px;
    position: absolute;
    top: 3px;
    left: 6px;
    background: url('../images/sprite.png') -256px 0 no-repeat;
}

#clear_search {
/*    width: 16px;*/
/*    height: 16px;*/
    position: absolute;
    top: 6px;
    right: 5px;
/*    background: url('../images/sprite.png') -272px 0 no-repeat;*/
}

#query {
    height: 16px;
/*    background: #666;*/
/*    border: #555753 2px solid;*/
/*    color: #eeeeec;*/
    padding-left: 6px;
    margin: 0 22px 0 0;
/*    padding-right: 22px;*/
}

/*#controls > li:active {*/
/*    background-color: #3465a4;*/
/*}*/








/**
 * jQuery lightBox plugin
 * This jQuery plugin was inspired and based on Lightbox 2 by Lokesh Dhakar (http://www.huddletogether.com/projects/lightbox2/)
 * and adapted to me for use like a plugin from jQuery.
 * @name jquery-lightbox-0.5.css
 * @author Leandro Vieira Pinho - http://leandrovieira.com
 * @version 0.5
 * @date April 11, 2008
 * @category jQuery plugin
 * @copyright (c) 2008 Leandro Vieira Pinho (leandrovieira.com)
 * @license CC Attribution-No Derivative Works 2.5 Brazil - http://creativecommons.org/licenses/by-nd/2.5/br/deed.en_US
 * @example Visit http://leandrovieira.com/projects/jquery/lightbox/ for more informations about this jQuery plugin
 */
#jquery-overlay {
	position: absolute;
	top: 0;
	left: 0;
	z-index: 90;
	width: 100%;
	height: 500px;
}
#jquery-lightbox {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	z-index: 100;
	text-align: center;
	line-height: 0;
}
#jquery-lightbox a img { border: none; }
#lightbox-container-image-box {
	position: relative;
	background-color: #666;
	width: 250px;
	height: 250px;
	margin: 0 auto;
}
#lightbox-container-image { padding: 10px; }
#lightbox-loading {
	position: absolute;
	top: 40%;
	left: 0%;
	height: 25%;
	width: 100%;
	text-align: center;
	line-height: 0;
}
#lightbox-nav {
	position: absolute;
	top: 0;
	left: 0;
	height: 100%;
	width: 100%;
	z-index: 10;
}
#lightbox-container-image-box > #lightbox-nav { left: 0; }
#lightbox-nav a { outline: none;}
#lightbox-nav-btnPrev, #lightbox-nav-btnNext {
	width: 49%;
	height: 100%;
	display: block;
}
#lightbox-nav-btnPrev { 
	left: 0; 
	float: left;
}
#lightbox-nav-btnNext { 
	right: 0; 
	float: right;
}
#lightbox-container-image-data-box {
	font: 10px Verdana, Helvetica, sans-serif;
	background-color: #666;
	margin: 0 auto;
	line-height: 1.4em;
	overflow: hidden;
	width: 100%;
	padding: 0 10px 0;
}
#lightbox-container-image-data {
	padding: 0 10px; 
	color: #666; 
}
#lightbox-container-image-data #lightbox-image-details { 
	width: 70%; 
	float: left; 
	text-align: left; 
}	
#lightbox-image-details-caption { font-weight: bold; }
#lightbox-image-details-currentNumber {
	display: block; 
	clear: left; 
	padding-bottom: 1.0em;	
}			
#lightbox-terNav-btnSave {
	width: 22px; 
	height: 32px;
	float: left;
    background: url('../images/sprite.png') -160px 0 no-repeat;
}
#lightbox-secNav-btnClose {
	width: 22px; 
	height: 32px;
	float: right;
    background: url('../images/sprite.png') -192px 0 no-repeat;
}
#lightbox-secNav {
}

